tests/__snapshots__/validation-type-errors-test-level-errors-stderr.snap.txt
Error: Property 'toBe' does not exist on type 'Modifier'. ts(2339)

  10 | 
  11 | test("reported type error?", () => {
  12 |   expect<string>().toBe<string>();
     |                    ~~~~
  13 | });
  14 | 

       at ./__typetests__/test-level.tst.ts:12:20

